      "M" (model)
    o Fixed: argument "neg.out" with curly bracket notation in argument "outcome"
      to function eqmcc() not operative
    o Fixed: matrix dimensions dropped in function getSolution()
    o Fixed: case names assigned to incorrect PIs in function 
      demoChart() under some conditions (thanks to M. Vink)

Version 1.1-2
    o Fixed: missing data triggered an error message in function truthTable()
    o Fixed: calibration of negative end-point concepts with logistic function
      produced incorrect set membership scores (thanks to C. Schneider)

Version 1.1-1
    o Improved: speed for resolution of PI chart 
    o Fixed: an error message was generated when fuzzy sets were not normalized
    o Fixed: prime implicants were joined together for single-column PI charts 
      by function solveChart() instead of being identified as alternative solutions 
    o Fixed: PRI column did not print in truth tables when argument PRI = TRUE

Version 1.1-0
    o New: functionality for analyzing path models with function eqmcc()
    o New: function deMorgan() computes negations of set expressions    
    o New: functionality for multivalent outcome sets
    o New: inference-statistical tests for truth table configurations 
      (currently only csQCA and mvQCA)
    o New: additional values "sufnec" and "necsuf" to argument "relation" in 
      function superSubset()
    o New: argument "row.dom" in function solveChart() 
    o Improved: documentation for function eqmcc()
    o Improved: output structure of eqmcc() with respect to intermediate solutions
    o Changed: default value to argument "row.dom" of function eqmcc() from TRUE 
      to FALSE
    o Changed: argument "row.dom" works independently of argument "all.sol" in 
      function eqmcc()    
    o Renamed: arguments "rowdom" and "direxp" in function eqmcc() to "row.dom" 
      and "dir.exp"
    o Renamed: values "necessity" (now "nec") and "sufficiency" (now "suf") to 