@@ -1,6 +1,6 @@
 Package: QCA
-Version: 1.1-3.2
-Date: 2014-06-26
+Version: 1.1-3.3
+Date: 2014-09-09
 Title: QCA: A Package for Qualitative Comparative Analysis
 Authors@R: c(person("Adrian", "Dusa", role = c("aut", "cre"),
                       email = "dusa.adrian@unibuc.ro"),
